# inspira

./: .gitignore  LICENSE  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  jest.config.js  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/api/: authRoutes.ts
backend/src/config/: database.ts
backend/src/entities/: AuthToken.ts  Item.ts  User.ts
backend/src/services/: AuthService.ts  ContentSyncService.ts
backend/src/trpc/: context.ts  router.ts  trpc.ts
backend/src/trpc/routers/: feed.ts
backend/tests/: setup.ts
backend/tests/integration/: feed.test.ts
backend/tests/services/: AuthService.test.ts  ContentSyncService.test.ts
recsys/: .env.example  Dockerfile  pyproject.toml
recsys/app/: main.py
recsys/app/api/: recommendations.py
recsys/app/models/: item.py  similarity.py
recsys/tests/: test_api.py  test_similarity.py
