[tool.poetry]
name = "inspira-recsys"
version = "0.1.0"
description = "Recommendation system microservice for Inspira"
authors = ["Inspira Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing"
